# kafka-demo

./: README.md
golang-kafka/: go.mod
golang-kafka/src/: consumer.go  producer.go
py-kafka/: pyproject.toml
py-kafka/src/py_kafka/: __init__.py  consumer.py  producer.py
rust_kafka/: Cargo.toml
rust_kafka/src/: consumer.rs  producer.rs
